# rl_deploy

./: CMakeLists.txt  README.md  package.xml
launch/: debug_spawn.launch  spawn_go2.launch
legged_gym/envs/: __init__.py
legged_gym/scripts/: play.py  train.py
rl_deploy/: README.md
rl_deploy/config/: controllers.yaml  go2_parkour_config.yaml
rl_deploy/launch/: complete_system.launch  rl_deploy.launch
rl_deploy/scripts/: observation_manager.py  test_ros_setup.py
robots/go2_description/launch/: check_joint.rviz  go2_rviz.launch
robots/go2_description/urdf/: go2_description.urdf
robots/go2_description/xacro/: gazebo.xacro
rsl_rl/rsl_rl.egg-info/: SOURCES.txt
scripts/: convert_isaaclab_model.py  fsm_controller.py  rl_policy_node.py  test_system.py
worlds/: parkour_simple.world
