<?xml version="1.0"?>
<package format="2">
  <name>rl_deploy</name>
  <version>1.0.0</version>
  <description>RL policy deployment for Go2 quadruped in Gazebo</description>
  
  <maintainer email="timofey@126.com">Tim</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>controller_manager</depend>
  <depend>joint_state_controller</depend>
  <depend>position_controllers</depend>
  <depend>tf</depend>
  <depend>cv_bridge</depend>
  
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  
</package>
